<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="@dimen/_8sdp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_notifications_24"
        android:layout_toLeftOf="@+id/cart"
        android:tint="@color/black"
        android:layout_marginEnd="@dimen/_18sdp"/>

    <ImageView
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/black"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/deliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deliver to"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@+id/appname"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="800001 Patna"
        android:textColor="@color/colorPrimary"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:drawableTint="@color/colorPrimary"
        android:layout_below="@+id/appname"
        android:layout_toEndOf="@+id/deliver"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/search"
        android:layout_below="@+id/deliver"
        android:layout_marginTop="@dimen/_15sdp"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textSize="@dimen/_12sdp"
        android:background="@drawable/border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/vp_flipper_layout"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/searchView"
        android:layout_height="@dimen/_150sdp">

        <technolifestyle.com.imageslider.FlipperLayout
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearitem"
        android:layout_below="@+id/vp_flipper_layout"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/pastItem"
            android:background="@drawable/border"
            android:padding="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_49sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_shopping_cart_24"
                android:tint="@color/colorPrimary"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgMedicine"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/pastitems" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pastOrder"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_49sdp"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:src="@drawable/medicine"
                android:tint="@color/colorPrimary"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/pastorder"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearproduct"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/linearitem"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:id="@+id/orderMedicines"
            android:layout_width="@dimen/_87sdp"
            android:layout_height="@dimen/_55sdp"
            android:background="@drawable/border"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgMedicine"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:src="@drawable/medicine"
                android:tint="@color/colorPrimary"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textMedicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgMedicine"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/medicine"
                android:textSize="@dimen/_11sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/takeAppointment"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/border"
            android:layout_width="@dimen/_87sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:id="@+id/imgAppointment"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_appointment_24"
                android:tint="@color/colorPrimary"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgAppointment"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/appointment" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/askDoctor"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/border"
            android:layout_width="@dimen/_86sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgAskDoctor"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_chat_24"
                android:tint="@color/colorPrimary"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgAskDoctor"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/askDoctor" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlReminder"
        android:layout_below="@id/linearproduct"
        android:background="@drawable/border"
        android:layout_width="@dimen/_280sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerInParent="true"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgReminders"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_baseline_reminders_24"
            android:tint="@color/colorPrimary"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imgReminders"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/reminder" />
    </RelativeLayout>


</RelativeLayout>