<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderMedicines">

    <LinearLayout
        android:id="@+id/linearlayoutOffer"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:layout_height="@dimen/_115sdp">

        <LinearLayout
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_65sdp"
            android:background="@drawable/border"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp">

            <LinearLayout
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_width="@dimen/_85sdp"
                android:padding="@dimen/_10sdp"
                android:layout_height="@dimen/_65sdp">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/percent_icon"
                    android:background="@drawable/circle_bg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Flat \n 15% Off"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginStart="@dimen/_8sdp"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#FFFFFF" />

            <LinearLayout
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_width="@dimen/_89sdp"
                android:layout_height="@dimen/_65sdp">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:tint="@color/black"
                    android:src="@drawable/ic_baseline_check_24"
                    android:background="@drawable/circle_bg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1 Lakhs+ \nProducts"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginStart="@dimen/_8sdp"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#FFFFFF" />

            <LinearLayout
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_65sdp">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_baseline_return_24"
                    android:tint="@color/black"
                    android:background="@drawable/circle_bg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Easy \n Returns"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginStart="@dimen/_8sdp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_95sdp"
        android:padding="@dimen/_10sdp"
        android:layout_below="@+id/linearlayoutOffer"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/txtsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:paddingEnd="@dimen/_8sdp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/exampleMedicine"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_below="@+id/txtsearch"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            android:background="@drawable/border_search_whitebg"/>

    </RelativeLayout>

    <!--<View
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_29sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/searchView"
        android:background="@android:color/darker_gray"/>-->

    <TextView
        android:id="@+id/txtor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:background="@drawable/circle_bg"
        android:layout_marginTop="@dimen/_198sdp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtOrderPrescription"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@+id/txtor"
        android:layout_marginTop="@dimen/_25sdp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:layout_centerHorizontal="true"
        android:text="@string/orderprescription"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/colorPrimary"
        android:drawableTint="@color/black"
        android:drawableStart="@drawable/ic_baseline_appointment_24"
        android:drawablePadding="@dimen/_8sdp"
        android:background="@drawable/border"/>

    <RelativeLayout
        android:id="@+id/expandView"
        android:layout_width="@dimen/_280sdp"
        android:layout_below="@+id/txtOrderPrescription"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtNoPrescription"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_35sdp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:textSize="@dimen/_13sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:text="@string/dontHavePrescription"
            android:drawableTint="@color/black"
            android:drawableStart="@drawable/ic_baseline_block_24"
            android:drawablePadding="@dimen/_8sdp" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            android:layout_marginEnd="@dimen/_10sdp"
            android:tint="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"/>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:visibility="gone"
            android:layout_below="@+id/txtNoPrescription"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtaddmedicine"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtfreeDoctor"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"/>

        </LinearLayout>

    </RelativeLayout>





</RelativeLayout>